--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
-<html> 
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>ic-06</title>
+    <script src="main.js"></script>
+  </head>
 
-<head>
-    <meta charset=utf-8/>
-</head>
-
-
-<body>
-
-
-</body>
-
+  <body>
+    <h1>JavaScript Part 2</h1>
+    <svg height="500" width="500" id="frame">
+      <circle cx="450" cy="100" r="50" />
+      <rect x="0" y="300" width="500" height="20" style="fill: rgb(0, 0, 255)" />
+    </svg>
+    <button>Click Me!</button>
+    <h2>Acknowledgements</h2>
+    <ul>
+      <li><a href="https://www.w3schools.com/tags/att_script_src.asp">Add Script Tag</a></li>
+      <li>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/SVG/Element/circle">Circle SVG</a>
+      </li>
+      <li><a href="https://www.w3schools.com/graphics/svg_rect.asp">SVG Rectangle</a></li>
+      <li>
+        <a href="SVG Positions"
+          >https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Positions</a
+        >
+      </li>
+    </ul>
+  </body>
 </html>
